feat: Migrate deduplication from JSON to SQLite database
- Full news data storage with indexed columns
- Faster lookups with SQL indices on link, title_hash, created_at, score
- Query functions: get_news_by_date, get_high_score_news, search_news
- Migration tool: python news_dedup.py migrate
- Automatic cleanup of old records

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,12 @@ build/
 output/*.json
 debug_*.json
 
-# History (keep structure, ignore content)
+# History database
 news_history.json
+news_history.db
+news_history.db-journal
+news_history.db-wal
+news_history.db-shm
 
 # Logs
 *.log
